--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "date-fns": "^4.1.0",
     "framer-motion": "^12.23.19",
     "lucide-react": "^0.544.0",
+    "marked": "^16.4.1",
     "next": "15.5.3",
     "next-themes": "^0.4.6",
     "nodemailer": "^7.0.6",
